tests/snapshots/integration__integration_tests__merge__readme_example_simple.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[36md29e0fd[0m[36m (no commit/squash/rebase needed)[0m
[107m [0m  * [33md29e0fd[m Implement JWT validation
[107m [0m   auth.rs | 13 [32m+++++++++++++[m
[107m [0m   1 file changed, 13 insertions(+)
✅ [32mMerged to [1m[32mmain[0m[32m (1 commit, 1 file, [32m+13[0m)[0m
🔄 [36mRemoving [1m[36mfix-auth[0m[36m worktree & branch in background[0m
