tests/snapshots/integration__integration_tests__merge__readme_example_simple_switch.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - fix-auth
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
✅ [32m[32mCreated worktree [1mfix-auth[22m based off [1mmain[22m @ [1m[REPO].fix-auth[39m[22m[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
