tests/snapshots/integration__integration_tests__merge__step_squash_both_flags.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - step
    - squash
    - "--no-verify"
    - "--stage=tracked"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_COMMIT_GENERATION__ARGS: "squash: combined commits"
    WORKTRUNK_COMMIT_GENERATION__COMMAND: echo
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
💡 [2mSkipping pre-commit hook ([90m--no-verify[39m)[22m
🔄 [36mSquashing 2 commits & tracked changes into a single commit [90m(3 files, [32m+3[39m[39m[90m)[39m...[39m
💡 [2mBackup created @ 31e06e8[22m
🔄 [36mGenerating squash commit message...[39m
[107m [0m  [1msquash: combined commits[22m
✅ [32mSquashed @ [2mf5ad358[22m[39m
